[gd_scene load_steps=7 format=3 uid="uid://wndowv53go84"]

[ext_resource type="Script" path="res://Textboxes/textbox.gd" id="1_gfbi4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4vk8d"]

[sub_resource type="Animation" id="Animation_nrith"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_c77ln"]
resource_name = "close_textbox"
length = 0.2
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(0.535887, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 100)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_ycpaa"]
resource_name = "open_textbox"
length = 0.25
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.25),
"transitions": PackedFloat32Array(1, 3.73213, 1.7411),
"update": 0,
"values": [Vector2(0, 100), Vector2(0, -10), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_70rlv"]
_data = {
"RESET": SubResource("Animation_nrith"),
"close_textbox": SubResource("Animation_c77ln"),
"open_textbox": SubResource("Animation_ycpaa")
}

[node name="Textbox" type="CanvasLayer"]
process_mode = 1
script = ExtResource("1_gfbi4")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 640.0
offset_bottom = 360.0
grow_horizontal = 2
grow_vertical = 2

[node name="ImageContainer" type="PanelContainer" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.75
anchor_right = 0.2
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0

[node name="Image" type="ColorRect" parent="Control/ImageContainer"]
layout_mode = 2

[node name="TextBoxContainer" type="PanelContainer" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.2
anchor_top = 0.75
anchor_right = 1.0
anchor_bottom = 1.0
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxEmpty_4vk8d")

[node name="TextBox" type="ColorRect" parent="Control/TextBoxContainer"]
layout_mode = 2
color = Color(1, 0.258824, 1, 1)

[node name="TextMargin" type="MarginContainer" parent="Control/TextBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="RichTextLabel" type="RichTextLabel" parent="Control/TextBoxContainer/TextMargin"]
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
text = "Bla bli bl√∂"
fit_content = true
scroll_active = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_70rlv")
}
